test/corpus/function.txt
====================================
Function definition
====================================

def map(f): [.[] | f];

------------------------------------

(program
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (array
      (pipeline
        (subscript_expression (dot))
        (identifier)))))

====================================
Function Expression
====================================

def f($x): 
  $x;
. | f

------------------------------------

(program
  (function_definition
    (identifier)
    (parameter_list
      (variable))
    (variable))
  (pipeline
    (dot)
    (identifier)))

====================================
Function multiple definitions
====================================

module{name: "funcs"};
def fn: 0;
def fn1(x): x;
def fn2($x; $y): $x + $y;

------------------------------------

(program
  (module
    (metadata
      (object 
        (pair 
          (field_id)
          (string (string_content))))))
  (function_definition
    (identifier)
    (number))
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (identifier))
  (function_definition
    (identifier)
    (parameter_list
      (variable)
      (variable))
    (binary_expression
      (variable)
      (variable))))
